--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link type="text/css" rel="stylesheet" href="path_to/simplePagination.css"/>
     <link rel="icon" href="images/profile-pic.ico">
     <link href="https://fonts.googleapis.com/css?family=Sarina" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Euphoria+Script" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="script.js">
@@ -15,83 +16,54 @@
     </script>
   </head>
   <body>
-    <header>
-      <div class="left">
-        <img src="images/profile-pic.png" alt="">
-        <h1>Munirah binti </h1>
-        <h1>Mohd Aziz</h1>
-        <nav>
-          <ul>
-            <li id="about">About me</li>
-            <li id="edu">Education</li>
-            <li id="cocu">Co-curiculum</li>
-            <li id="skill">Skill</li>
-            <li id="interest">Interest</li>
-          </ul>
-        </nav>
-      </div>
 
-    </header>
-
-    <div class="main">
-      <div class="portrait">
-        <img src="images/background2.jpeg" alt="">
-      </div>
-        <div class="about">
+        <div class="isi about">
+          <div class="left">
+            <img src="images/profile-pic.png" alt="">
+            <h1>Munirah binti Mohd Aziz</h1>
+          </div>
+          <br>
           <p>Student of International Islamic University
-          Malaysia,Bachelor of Information Technology</p>
-          <p>Age 21,first of 3 sisters.</p>
+          Malaysia,Bachelor of Information Technology</p><br>
+          <p>Age 21,first of 3 sisters.</p><br>
           <p>I love all the little things in life. The morning sun, the feeling
             of leaves and watching ants marching by.</p>
           <p>Passionate in life and currently looking for my own place in the world.</p>
         </div>
-        <div class="edu">
+        <div class="isi edu">
+          <h1>Education</h1><br>
           <ul>
-            <li>International Islamic University Malaysia</li>
-            <li>International Islamic School Malaysia</li>
-            <li>SMA Persekutuan Bentong</li>
+            <li><img class="logo" src="images/iium.png" alt=""><br>International Islamic University Malaysia</li>
+            <li><img class="logo" src="images/iism.png" alt=""><br>International Islamic School Malaysia</li>
+            <li><img class="logo" src="images/superb.jpg" alt=""><br>SMA Persekutuan Bentong</li>
           </ul>
         </div>
-        <div class="cocu">
+        <div class="isi cocu">
+          <h1>Co-curiculars</h1><br>
           <ul>
             <li>IIUM Niche Debate Tournament</li>
             <li>IIUM MUN Conference</li>
             <li>Bengkel Kejurulatihan (TOT) Sukarelawan Jiwa Malaysia</li>
           </ul>
         </div>
-        <div class="skill">
+        <div class="isi skill">
+          <h1>Skillset</h1><br>
           <div class="skillset">
             <ul>
-              <li>Public Speaking</li>
-              <li>Active listening</li>
-              <li>Teamwork</li>
-              <li>Written & oral communication</li>
-              <li>Creativity & problem solving</li>
+              <li class="speak">Public Speaking</li>
+              <li class="listen">Active listening</li>
+              <li class="team">Teamwork</li>
+              <li class="write">Written & oral communication</li>
+              <li class="creative">Creativity & problem solving</li>
             </ul>
           </div>
-          <div class="graph">
-            <div class="bar speak">
-
-            </div>
-            <div class="bar listen">
-
-            </div>
-            <div class="bar team">
-
-            </div>
-            <div class="bar write">
-
-            </div>
-            <div class="bar creative">
-
-            </div>
-          </div>
         </div>
-        <div class="interest">
+        <div class="isi interest">
+          <h1>Interests</h1><br>
           <div class="digital">
 
           </div>
-          <div class="Drawing">
+          <div class="drawing">
 
           </div>
           <div class="crochet">
@@ -101,11 +73,6 @@
 
           </div>
         </div>
-    </div>
-
-
-
-
     <footer></footer>
 
   </body>
