--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <p>Age 21,first of 3 sisters.</p><br>
           <p>I love all the little things in life. The morning sun, the feeling
             of leaves and watching ants marching by.</p>
-          <p>Passionate in life and currently looking for my own place in the world.</p>
+          <p>Passionate in life and currently looking for my own place in the world.</p><br><br>
         </div>
         <div class="isi edu">
           <h1>Education</h1><br>
