--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"></script>
     <script type="text/javascript">
     $(document).ready(function(){
-      $('.thumb a').click(function(e){
+      $('.thumb a').hover(function(e){
         e.preventDefault();
         $('.imgbox img').attr("src",$(this).attr("href"));
       })
@@ -31,7 +31,7 @@
           <br>
           <p>Student of International Islamic University
           Malaysia,Bachelor of Information Technology</p><br>
-          <p>Age 21,first of 3 sisters.</p><br>
+          <p>Age 21,first of 3 sisters, Pahang born and bred.</p><br>
           <p>I love all the little things in life. The morning sun, the feeling
             of leaves and watching ants marching by.</p>
           <p>Passionate in life and currently looking for my own place in the world.</p><br><br>
@@ -70,10 +70,10 @@
             <img src="images/img1.jpg" alt="">
           </div>
           <ul class="thumb">
-            <li><a href="images/img1.jpg" target="imgbox"><img src="images/img1.jpg" alt=""></a></li>
-            <li><a href="images/img2.jpg" target="imgbox"><img src="images/img2.jpg" alt=""></a></li>
-            <li><a href="images/img3.jpg" target="imgbox"><img src="images/img3.jpg" alt=""></a></li>
-            <li><a href="images/img4.jpg" target="imgbox"><img src="images/img4.jpg" alt=""></a></li>
+            <li><a href="images/img1.jpg" target="imgbox"><img src="images/img1.jpg" alt=""></a><br>Crochet</li>
+            <li><a href="images/img2.jpg" target="imgbox"><img src="images/img2.jpg" alt=""></a><br>Cross stitch</li>
+            <li><a href="images/img3.jpg" target="imgbox"><img src="images/img3.jpg" alt=""></a><br>Drawing</li>
+            <li><a href="images/img4.jpg" target="imgbox"><img src="images/img4.jpg" alt=""></a><br>Digital art</li>
           </ul>
         </div>
 
