--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"></script>
     <script type="text/javascript">
     $(document).ready(function(){
-      $('.thumb a').hover(function(e){
+      $('.thumb a').click(function(e){
         e.preventDefault();
         $('.imgbox img').attr("src",$(this).attr("href"));
       })
