--- a/munirah/resume.html
+++ b/munirah/resume.html
@@ -28,9 +28,7 @@
       <nav>
         <ul>
           <li><a href="resume.html">Home</a></li>
-          <li><a href="#">Usrah budi 4</a></li>
-          <li><a href="#">Traditional projects</a></li>
-          <li><a href="#">Gallery</a></li>
+          <li><a href="usrah.html">Usrah Budi 4</a></li>
         </ul>
       </nav>
     </div>
